<resources>
    <string name="app_name">FragmentJetpackNavigation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_text">First Fragment</string>
    <string name="button_to_second_fragment">To second fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="button_to_third_fragment">To Third Fragment</string>
    <string name="button_to_first_fragment">To First Fragment</string>
    <string name="third_fragment">Third fragment</string>
    <string name="result_message">Result: %1$d</string>
    <string name="result_placeholder">Enter value to count</string>
    <string name="count_button_text">Count</string>
    <string name="show_phone_book_label">Show phone book</string>
</resources>
