<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    tools:context=".FirstFragment">
    <TextView
        android:id="@+id/firstFragmentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_fragment_text" />


    <Button
        android:id="@+id/button_to_second_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_to_second_fragment"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="12dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/input_fib_field"
            android:layout_width="0dp"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/result_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/result_placeholder" />
        <Button
            android:id="@+id/service_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/count_button_text"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_to_contact_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/show_phone_book_label" />
</LinearLayout>